--- a/index.html
+++ b/index.html
@@ -13,34 +13,36 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js"
+      integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
-   <!-- <i class="fa-solid fa-lock-open"></i> -->
    <div class="wrapper">
       <div class="column">
-         <h2>Text</h2>
-         <button><i class="fa-solid fa-lock"></i></button>
+         <h2 data-type="copy"></h2>
+         <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
       </div>
 
       <div class="column">
-         <h2>Text</h2>
-         <button><i class="fa-solid fa-lock"></i></button>
+         <h2 data-type="copy"></h2>
+         <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
       </div>
 
       <div class="column">
-         <h2>Text</h2>
-         <button><i class="fa-solid fa-lock"></i></button>
+         <h2 data-type="copy"></h2>
+         <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
       </div>
 
       <div class="column">
-         <h2>Text</h2>
-         <button><i class="fa-solid fa-lock"></i></button>
+         <h2 data-type="copy"></h2>
+         <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
       </div>
 
       <div class="column">
-         <h2>Text</h2>
-         <button><i class="fa-solid fa-lock"></i></button>
+         <h2 data-type="copy"></h2>
+         <button data-type="lock"><i class="fa-solid fa-lock-open" data-type="lock"></i></button>
       </div>
    </div>
    <script src="app.js"></script>
